fix docs typo, update README, update docs
